<resources>
    <string name="app_name">Chats</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">E-mail</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="image_logo">App logo</string>
    <string name="logout">logout</string>
    <string name="Message">Message</string>
    <string name="hint_message_write">Write message here</string>
</resources>