<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@color/white"
    tools:context=".AuthenticationActivity"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/tooolbar_authentication"/>

    <ImageView
        android:id="@+id/app_logo"
        android:contentDescription="@string/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/app_logo" />

    <androidx.cardview.widget.CardView
        app:cardBackgroundColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        app:contentPadding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name"
                android:inputType="textCapWords"
                android:hint="@string/hint_name"
                style="@style/EditText_hint"/>
            <EditText
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"
                style="@style/EditText_hint"/>
            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                style="@style/EditText_hint"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:weightSum="2"
        android:orientation="horizontal">
        
        <TextView
            android:id="@+id/signup"
            style="@style/texviewStyleLogin"
            android:layout_marginEnd="10dp"
            android:text="@string/signup"/>
        <TextView
            android:id="@+id/login"
            style="@style/texviewStyleLogin"
            android:layout_marginStart="10dp"
            android:text="@string/login"/>

    </LinearLayout>

</LinearLayout>